test/scc_test/decl/semantic-errors/006.t
void test(int a, int a)
{
}